adding css img assets footer fontawesome

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--for mobile pinch and zoom-->
-        <title>Tornado Grande</title>
+        <title>Lindsay Mulhollen</title>
         <link rel="stylesheet" href="css/main.css">
+        <script src="assets/fontawesome-all.js"></script>
     </head>
     <body>
         <header>
@@ -16,11 +17,16 @@
                     <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
-            <div id="home"><!--home div-->
-                <img src="" alt="">
-                <h1>Lindsay Mulhollen</h1>
-                <p>Lover of creative projects, brainstorming, and impromptu dance parties, I have been having a blast with arts and media since early childhood.</p>
-            </div><!--/home div-->
         </header>
+        <div><!--home div-->
+            <img src="img/lm-homepage.jpg" alt="Lindsay at the Akron Art Museum" height="917">
+            <h1>Lindsay Mulhollen</h1>
+            <p>Lover of creative projects, brainstorming, and impromptu dance parties, I have been having a blast with arts and media since early childhood.</p>
+        </div><!--/home div-->
+        <footer>
+                <!--linkedin--><a href="https://www.linkedin.com/in/lindsay-mulhollen-72212254/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
+                <!--github--><a href="https://github.com/mulhollen" target="_blank"><i class="fab fa-github-square fa-lg"></i></a>
+                <!--behance--><a href="https://www.behance.net/lindsaymule501" target="_blank"><i class="fab fa-behance-square fa-lg"></i></a>
+        </footer> 
     </body>
 </html>
