--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <header>
             <nav id="nav">
                 <ul>
-                    <li id="nav-home"><a href="#home">home</a></li>
-                    <li id="nav-about"><a href="#about">about</a></li>
-                    <li id="nav-resume"><a href="#resume">resume</a></li>
+                    <li id="nav-home"><a href="index.html">home</a></li>
+                    <li id="nav-about"><a href="about.html">about</a></li>
+                    <li id="nav-resume"><a href="resume.html">resume</a></li>
                     <li id="nav-contact"><a href="#contact">contact</a></li>
                 </ul>
             </nav>
@@ -21,10 +21,8 @@
         <div><!--home div-->
             <main class="row">
                 <img class="main-img" src="img/lm-homepage.jpg" alt="Lindsay at the Akron Art Museum" height="917">
-                <div class="column"></div><!--column in row-->
-                    <h1 class="lindsay">Lindsay<br>Mulhollen</h1>
-                    <p class="column">Lover of creative projects, brainstorming, and impromptu dance parties, I have been having a blast with arts and media since early childhood.</p>
-                </div>
+                <h1 class="lindsay">Lindsay<br>Mulhollen</h1>
+                <p class="column">Lover of creative projects, brainstorming, and impromptu dance parties, I have been having a blast with arts and media since early childhood.</p>
             </main>
         </div><!--/home div-->
         <footer>
