flex-box update

--- a/about.html
+++ b/about.html
@@ -14,20 +14,26 @@
                     <li id="nav-home"><a href="index.html">home</a></li>
                     <li id="nav-about"><a href="about.html">about</a></li>
                     <li id="nav-resume"><a href="resume.html">resume</a></li>
-                    <li id="nav-contact"><a href="#contact">contact</a></li>
+                    <li id="nav-contact"><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
         </header>
         <div class="about"><!--about content div-->
-            <h1 class="page-title">about:</h1>
-                <img class="lm-banner" src="img/lm-banner.jpg" alt="lindsay on set">
-                <p class="lm-banner">Lover of creative projects, brainstorming, and impromptu dance parties, I have been having a blast with arts and media since early childhood.
-                    Users want to read information about you, including your personal story of why you chose to become a software developer.
-                    <br>
-                    Lover of creative projects, brainstorming, and impromptu dance parties, I have been having a blast with arts and media since early childhood.
-                    Users want to read information about you, including your personal story of why you chose to become a software developer.
-                </p>
-            </div><!--/about content div-->
+            <div id="flexRow">
+                <h1 class="page-title">about:</h1>
+                <div id="flexColumn">
+                    <div class="slide">
+                        <img src="img/lm-banner.jpg" alt="lindsay on set">
+                    </div>
+                    <p>Lover of creative projects, brainstorming, and impromptu dance parties, I have been having a blast with arts and media since early childhood.
+                        Users want to read information about you, including your personal story of why you chose to become a software developer.
+                        <br>
+                        Lover of creative projects, brainstorming, and impromptu dance parties, I have been having a blast with arts and media since early childhood.
+                        Users want to read information about you, including your personal story of why you chose to become a software developer.
+                    </p>
+                </div>
+            </div>
+        </div><!--/about content div-->
         <footer>
             <div class="social">
                 <!--linkedin--><a href="https://www.linkedin.com/in/lindsay-mulhollen-72212254/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
