--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
                     <li id="nav-home"><a href="index.html">home</a></li>
                     <li id="nav-about"><a href="about.html">about</a></li>
                     <li id="nav-resume"><a href="resume.html">resume</a></li>
-                    <li id="nav-contact"><a href="#contact">contact</a></li>
+                    <li id="nav-contact"><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
         </header>
