--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
                     <li id="nav-home"><a href="index.html">home</a></li>
                     <li id="nav-about"><a href="about.html">about</a></li>
                     <li id="nav-resume"><a href="resume.html">resume</a></li>
-                    <li id="nav-contact"><a href="#contact">contact</a></li>
+                    <li id="nav-contact"><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
         </header>
         <div><!--home div-->
-            <main class="row">
+            <main id="flexRow">
                 <img class="main-img" src="img/lm-homepage.jpg" alt="Lindsay at the Akron Art Museum" height="917">
-                <h1 class="lindsay">Lindsay<br>Mulhollen</h1>
-                <p class="column">Lover of creative projects, brainstorming, and impromptu dance parties, I have been having a blast with arts and media since early childhood.</p>
+                <div id="flexColumn">
+                    <h1 class="lindsay">Lindsay<br>Mulhollen</h1>
+                    <p>Lover of creative projects, brainstorming, and impromptu dance parties, I have been having a blast with arts and media since early childhood.</p>
+                </div>
             </main>
         </div><!--/home div-->
         <footer>
