--- a/homejs.html
+++ b/homejs.html
@@ -26,19 +26,20 @@
                 <li id="nav-contact">
                     <a href="contact.html">contact</a>
                 </li>
+                <li id="nav-blog">
+                    <a href="blog.html">blog</a>
+                </li>
             </ul>
         </nav>
     </header>
     
     <div>
-        <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-            <div id="myDropdown" class="dropdown-content">
-                <a href="#">Front-end Developer</a>
-                <a href="#">UX + UI Designer</a>
-                <a href="#">Media Designer</a>
-            </div>
-        </div>
+        <select name="cars">
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="fiat">Fiat</option>
+            <option value="audi">Audi</option>
+        </select>
 
     </div>
 
