--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,9 @@
                 <li id="nav-contact">
                     <a href="contact.html">contact</a>
                 </li>
+                <li id="nav-blog">
+                    <a href="blog.html">blog</a>
+                </li>
             </ul>
         </nav>
     </header>
